--- a/aqua-ethos-setup/config.json
+++ b/aqua-ethos-setup/config.json
@@ -30,6 +30,8 @@
         "author": "administrator",
         "lastupdate": 1494351625,
         "url": "ETH_ECR_REGION",
+        "username": "ETH_ECR_USERNAME",
+        "password": "ETH_ECR_PASSWORD",
         "auto_pull": false,
         "auto_pull_time": "03:00",
         "auto_pull_max": 100,
@@ -49,6 +51,8 @@
         "author": "administrator",
         "lastupdate": 1494351625,
         "url": "ETH_ECR_DEV_REGION",
+        "username": "ETH_ECR_DEV_USERNAME",
+        "password": "ETH_ECR_DEV_PASSWORD",
         "auto_pull": false,
         "auto_pull_time": "03:00",
         "auto_pull_max": 100,
